Add new teaching media and update docs
Added new images for teaching workshops and events, updated teachingMedia.json with Homing.zip ft. Tzuyun Wei, and revised commons.yml, events.yml, homepage.yml, and teaching.yml to include new collaborations, event details, and links. Also added a prebuild script to package.json and made minor formatting fixes in .gitignore.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "generatePoster": "node generatePosters.js",
     "cache:teaching-media": "node scripts/cacheTeachingMedia.js",
     "sync:yml": "node scripts/updateYamlFromSheets.js",
+    "prebuild": "npm run sync:yml && npm run cache:teaching-media && npm run generatePoster",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
