--- a/src/docs/events.yml
+++ b/src/docs/events.yml
@@ -2,12 +2,15 @@
   date: December 2025
   type: Talk
   place: National Taiwan University of Science and Technology, Taipei, Taiwan
+  excerpt: Coversation with I-hao Liao, Tzuyun Wei
+  link:
+    href: https://www.youtube.com/watch?v=ab5raOEKiRg
 - title: 'A Story That Lives Within US: Ada'
   date: December 2025
   type: Exhibition
   place: Crossing Art, Chelsea, New York, NY, USA
   excerpt: Curated by Tzu-Ying (Naomi) Chan. (Guest Stop) In Transit.
-- title: 'Shop*: Exchanging Recreation'
+- title: Recreational Timebank (Offline Branch)
   date: November 2025
   type: Exhibition
   place: Beholding Cell, Taipei, Taiwan
