--- a/src/docs/homepage.yml
+++ b/src/docs/homepage.yml
@@ -6,7 +6,7 @@
   type: CustomCard
   title: In Motion
   body: |-
-    1. I'm working on a `research`  project with Professor [Asad Pervaiz](https://oldthingsnewplaces.com) called “Source, Code, Print”
+    1. I'm working on a `research`  project with Professor [Asad Pervaiz](https://oldthingsnewplaces.com) called [“Source, Code, Print”](https://source-code-print.vercel.app/)
     2. I'm co-leading and `teaching` the [“Graduate Studio: Technology A”](https://tech-a.designfuture.space) class with Professor [Matt Martin](https://objectsinternational.org/)
     3. I'm in the early stage of planning and `organizing` the 2026 Processing Community Day Taiwan!
   background: DeepSkyBlue
