--- a/src/docs/teaching.yml
+++ b/src/docs/teaching.yml
@@ -1,3 +1,11 @@
+- title: Homing.zip ft. Tzuyun Wei
+  date: Nov 30, 2025
+  type: Workshop
+  place: For Future 未來學家, Taiwan (Remote)
+  link:
+    href: https://drive.google.com/drive/folders/1la1zmCLlDt7F7Z29QzQ57fWiAAnbz0_C?usp=drive_link
+  img1: https://drive.google.com/file/d/19AfR-JwxlaPy5zfFaSuQ9SCYpSj2E0ck/view?usp=drive_link
+  img2: https://drive.google.com/file/d/1IAkRKULF_KKBImSKIyRefvCDmNuiTGFZ/view?usp=drive_link
 - title: 'p5.js 2.0 Workshop: Combinatory Poetry with Variable Fonts'
   date: Sep 27, 2025
   type: Workshop
